// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post schema should fetch a list of posts 1`] = `
Array [
  Object {
    "_id": "5abba8e47af4d91c259e12ee",
    "author": null,
    "createdAt": "1523390727",
    "editedAt": "1523390727",
    "message": "Some message",
  },
]
`;

exports[`post schema should respond with a single post 1`] = `
Object {
  "_id": "5abba8e47af4d91c259e12ee",
  "author": null,
  "createdAt": "1523390727",
  "editedAt": "1523390727",
  "message": "Some message",
}
`;
